# md-gen-nlp

./: .gitignore  README.md  pyproject.toml
nlp_generalization/configs/mrc/: dataset_config.py  model_config.py  train_config.py
nlp_generalization/configs/nli/: dataset_config.py  model_config.py  train_config.py
nlp_generalization/mrc/notebooks/: Build Dataset - HotPotQA + Squad - Truncated.ipynb  Evaluating Finetuned Models.ipynb  Pushing Model to HF Hub.ipynb  Question Answering with Huggingface Models.ipynb  T5 Models.ipynb
nlp_generalization/mrc/prediction_files/: adversarial_hotpotqa-bertbc-adapter-895K-1.yml.json  adversarial_hotpotqa-bertbc-adapter-895K-2.yml.json  adversarial_hotpotqa-bertbc-lora-591K-2.yml.json  adversarial_hotpotqa-bertlc-adapter-3.17M-1.yml.json  adversarial_hotpotqa-bertlc-lora-1.57M-1.yml.json  adversarial_hotpotqa-bertlc-lora-1.57M-2.yml.json  adversarial_hotpotqa-bertlc-lora-1.57M-3.yml.json  adversarial_hotpotqa-bertlc-plain-3.yml.json  adversarial_hotpotqa-optb-plain-1.yml.json  adversarial_hotpotqa-optl-lora-3.15M-1.yml.json  adversarial_hotpotqa-optl-plain-1.yml.json  adversarial_hotpotqa-rb-lora-591K-3.yml.json  adversarial_hotpotqa-rl-adapter-3.17M-1.yml.json  adversarial_hotpotqa-rl-adapter-3.17M-2.yml.json  adversarial_hotpotqa-rl-lora-1.57M-1.yml.json  adversarial_hotpotqa-rl-lora-1.57M-3.yml.json  adversarial_hotpotqa-rl-plain-1.yml.json  adversarial_hotpotqa-rl-plain-2.yml.json  adversarial_hotpotqa-rl-plain-3.yml.json  (+69 more)
nlp_generalization/reporting/: wandb.py
nlp_generalization/yamlenv/: __init__.py  env.py
(+1981 files in other folders)
