[tool.poetry]
name = "generalization"
version = "0.1.0"
description = ""
authors = ["sagnik ray choudhury <sagnikrayc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.5.0"
ipython = "^8.19.0"
torch = "^2.1.2"
numpy = "^1.26.3"
transformers = "4.35.2"
peft = "^0.7.1"
evaluate = "^0.4.1"
datasets = "^2.16.1"
adapters = "^0.1.0"
scikit-learn = "^1.3.2"
wandb = "^0.16.2"
pickleshare = "^0.7.5"
pydantic = "^2.5.3"
rich = "^13.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
